--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,8 @@
 
 html {
 
-    font-size: 16px;
-    line-height: 32px;
+    font-size: 1rem;
+    line-height: 2rem;
     font-family: "Open Sans Condensed", Helvetica, arial, sans-serif;
     font-weight: 400;
     
@@ -186,7 +186,7 @@ Small cta link with custom animation
 
     /*styling button */
     background-color: var(--lead-theme-color);
-    color: white;
+    color:  var(--global-color-neutral-xxxx-light);;
     border-radius: 5px;
     border: 0;
     padding: 10px 10px;
@@ -233,7 +233,7 @@ Small cta link with custom animation
 
   .c-button-modal-close{
     background-color: var(--lead-theme-color);
-    color: white;
+    color:  var(--global-color-neutral-xxxx-light);;
     border-radius: 5px;
     border: 0;
     padding: 10px 10px;
@@ -246,7 +246,7 @@ Small cta link with custom animation
 
   .c-button-modal__text{
     /*font: bold 16px 'Quicksand', san-serif;*/
-    color: #fff;
+    color: var(--global-color-neutral-xxxx-light);
     transition: all 0.2s;
   }
 
@@ -261,8 +261,8 @@ Small cta link with custom animation
   .button--loading::after{
       content: "";
       position: absolute;
-      width: 16px;
-      height: 16px;
+      width: 1rem;
+      height: 1rem;
      
       top:0;
       left:0;
@@ -270,7 +270,7 @@ Small cta link with custom animation
       bottom:0;
       margin:auto;
       border:4px solid transparent;
-      border-top-color: #fff;
+      border-top-color:  var(--global-color-neutral-xxxx-light);;
       border-radius: 50%;
       animation:button-loading-spinner 1s ease infinite ;
       
@@ -389,8 +389,8 @@ color: #474D59;
     right: 0;
     margin-right: 8px;
     text-align: right;
-    background-color: #fff;
-    padding: 16px;
+    background-color:  var(--global-color-neutral-xxxx-light);;
+    padding: 1rem;
     max-width: 260px;
     border-width: 0 4px 0 0;
 }
